--- a/Inventory/InventoryManagement/psqltables.conf
+++ b/Inventory/InventoryManagement/psqltables.conf
@@ -68,6 +68,25 @@ CREATE TABLE Users
     isActive BOOLEAN NOT NULL
 );
 
+CREATE TABLE UserLog
+(
+    sessionID SERIAL PRIMARY KEY,
+    user_id INT NOT NULL,
+    LoginTime TIMESTAMP NOT NULL,
+    LogoutTime TIMESTAMP NOT NULL,
+    IsActive BOOLEAN NOT NULL,
+    
+    FOREIGN KEY (user_id) REFERENCES Users(user_id)
+);
+
+CREATE TABLE Customer
+(
+    customer_id SERIAL PRIMARY KEY,
+    customerName VARCHAR(255) NOT NULL,
+    customerAddress VARCHAR(500) NOT NULL,
+    dateAdded TIMESTAMP NOT NULL
+);
+
 CREATE TABLE Orders (
     Id SERIAL PRIMARY KEY,
     OrderNumber VARCHAR(50) NOT NULL UNIQUE,
