--- a/Inventory/InventoryManagement.Tests/InventoryManagement.Tests.csproj
+++ b/Inventory/InventoryManagement.Tests/InventoryManagement.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.5.0" />
     <PackageReference Include="MSTest.TestFramework" Version="3.5.0" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
