added tests and more classes

--- a/Inventory/InventoryManagement/psqltables.conf
+++ b/Inventory/InventoryManagement/psqltables.conf
@@ -79,6 +79,26 @@ CREATE TABLE UserLog
     FOREIGN KEY (user_id) REFERENCES Users(user_id)
 );
 
+CREATE TABLE InventoryNotes
+(
+    noteId SERIAL PRIMARY KEY,
+    user_id INT NOT NULL,
+    order_Id INT,
+    title VARCHAR(50) NOT NULL,
+    content VARCHAR(900) NOT NULL,
+    author VARCHAR(50) NOT NULL,
+    createdAt TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updatedAt TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    noteType VARCHAR(25) NOT NULL,
+    
+    FOREIGN KEY (user_id) REFERENCES Users(user_id),
+    FOREIGN KEY (orderId) REFERENCES Orders(orderId)
+);
+
+CREATE INDEX idx_inventorynotes_user_id ON InventoryNotes(user_id);
+CREATE INDEX idx_inventorynotes_order_id ON InventoryNotes(order_id);
+CREATE INDEX idx_inventorynotes_note_type ON InventoryNotes(note_type);
+
 CREATE TABLE Customer
 (
     customer_id SERIAL PRIMARY KEY,
@@ -105,7 +125,7 @@ CREATE TABLE Orders (
     PaymentReference VARCHAR(100),
     ShippedDate TIMESTAMP,
     DeliveredDate TIMESTAMP,
-    Notes TEXT,
+    notesId INT NOT NULL,
     CreatedByUserId INT NOT NULL,
     CreatedAt TIMESTAMP NOT NULL,
     UpdatedAt TIMESTAMP,
@@ -113,6 +133,12 @@ CREATE TABLE Orders (
     FOREIGN KEY (SupplierId) REFERENCES Suppliers(Id),
     FOREIGN KEY (CreatedByUserId) REFERENCES Users(Id)
 );
+
+ALTER TABLE Orders
+ADD CONSTRAINT fk_inventory_notes
+FOREIGN KEY (notesId) REFERENCES InventoryNotes(noteId)
+ON DELETE CASCADE 
+ON UPDATE NO ACTION;
 
 CREATE TABLE OrderItems (
     Id SERIAL PRIMARY KEY,
